--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "@prisma/client": "^6.0.0",
+    "@supabase/supabase-js": "^2.95.3",
     "bcryptjs": "^2.4.0",
+    "dotenv": "^17.3.1",
     "ethers": "^6.13.0",
     "fastify": "^5.0.0",
     "ioredis": "^5.4.0",
